Fix for bundled JRE missing modules
Include required JDK modules in jlink/jpackage scripts (java.management, jdk.management, jdk.crypto.ec; add jdk.crypto.mscapi on Windows) for Windows/Linux/macOS builds. Wrap ManagementFactory/ThreadMXBean calls in try/catch in SystemControllerV1, BatchAutorouterThread and RoutingJobSchedulerActionThread so the app degrades gracefully when management/crypto modules are absent in minimal JREs. Update AGENTS.md with module requirements, guidance for jlink --add-modules, and a note about an ApiKeyValidationFilter bypass bug and its fix.